--- a/contacto.html
+++ b/contacto.html
@@ -54,6 +54,7 @@
         <section>
             <p>Teléfonos: (02284) 424278 - (02284) 425962 - (02284) 662975 (de emergencia)</p>
             <p>Mail: diesel_sangabriel@yahoo.com.ar</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3190.4062164294833!2d-60.32164452430738!3d-36.904550872217584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95944433199b50a9%3A0x216271b56804cc3e!2sAv.%20del%20Valle%203801%2C%20B7400%20Olavarr%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1732630969791!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <div class="footer">
